# ShellBox

./: .gitignore  .gitmodules  LICENSE.md  README.md  README_JP.md  README_KO.md  README_ZH.md  README_arm64.md  README_arm64_zh.md  SECURITY.md  meson.build  meson_options.txt  xX_main_Xx.h
ShellBox.xcodeproj/: project.pbxproj
app/: AboutAppearanceViewController.h  AboutAppearanceViewController.m  AboutExternalKeyboardViewController.h  AboutExternalKeyboardViewController.m  AboutNavigationController.h  AboutNavigationController.m  AboutViewController.h  AboutViewController.m  AccessibilityFixes.m  AltIconViewController.h  AltIconViewController.m  App.xcconfig  AppARM64-ffmpeg.xcconfig  AppARM64.xcconfig  AppDelegate.h  AppDelegate.m  AppGroup.h  AppGroup.m  AppLib.xcconfig  ArrowBarButton.h  ArrowBarButton.m  BarButton.h  BarButton.m  CurrentRoot.h  CurrentRoot.m  DebugServer.c  DebugServer.h  DelayedUITask.h  DelayedUITask.m  DelayedUITask.swift  ExceptionExfiltrator.h  ExceptionExfiltrator.m  FakeFFmpeg.m  FontPickerViewController.h  FontPickerViewController.m  GuestARM64.xcconfig  IOSCalls.m  Info.plist  Linux.xcconfig  LinuxInterop.c  (+62 more)
asbestos/: asbestos.c  offsets.c
benchmark/: BENCHMARK_COMPAT.md  BENCHMARK_PERF.md  MODERN_IPHONE_VERIFICATION.md  create_fakefs.py  jit_smoke_arm64.sh  run.sh  verify_modern_iphone.sh
emu/: tlb.c
fastlane/: Appfile  Deliverfile  Fastfile  Matchfile  footer.txt
fs/: fake-db.c  fake-db.h  fake.c  fake.h  fd.c  fd.h  pipe.c  poll.c  sock.c  stat.c
iSH.xcodeproj/: project.pbxproj
kernel/: calls.c  calls.h  exec.c  exit.c  (+9 more)
(+56 files in other folders)
