option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['asbestos', 'unicorn'], value: 'asbestos')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
option('kconfig', type: 'array', value: [])

option('guest_arch', type: 'combo', choices: ['x86', 'arm64'], value: 'x86',
       description: 'Guest architecture to emulate')

option('perf_counters', type: 'boolean', value: false,
       description: 'Enable lightweight emulator performance counters exposed under /proc/ish/perf')

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)
